k8s-files/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproject-ingress
  namespace: elephant-workshop  # Ensure it matches the namespace used for the backend and frontend services
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80, "HTTPS": 443}]'  # Add HTTPS listener
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:976979239121:certificate/9f64a522-e6f2-4ace-9320-6c45a7d494ed
    alb.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: alb
  rules:
  - host: elephant-eks.tdtlworld.com  # Your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-backend-service
            port:
              number: 8000  # Port for the backend (Django)
